--- a/example/MorphTargets.html
+++ b/example/MorphTargets.html
@@ -38,9 +38,9 @@
  		<script type='importmap'>
 	 		{
 		 		"imports": {
-			 		"three": "https://unpkg.com/three@0.145.0/build/three.module.js",
-					"three/addons/": "https://unpkg.com/three@0.145.0/examples/jsm/",
-					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.1/build/index.module.js"
+			 		"three": "https://unpkg.com/three@0.146.0/build/three.module.js",
+					"three/addons/": "https://unpkg.com/three@0.146.0/examples/jsm/",
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.2/build/index.module.js"
 		 		}
 	 		}
  		</script>
@@ -52,6 +52,7 @@
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
 			import { LoopSubdivision } from 'three-subdivide';
+			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 			let container, stats;
 			let camera, scene, renderer;
