--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -44,8 +44,8 @@
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 			import { TeapotGeometry } from 'three/addons/geometries/TeapotGeometry.js';
 
-			import { LoopSubdivision } from 'three-subdivide';
-			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			// import { LoopSubdivision } from 'three-subdivide';
+			import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 			let renderer, scene, camera;
 			let texture, topTexture, botTexture;
@@ -87,8 +87,7 @@
 				controls.target.set( 0, 0, 0 );
 				controls.update();
 
-				scene.add( new THREE.AmbientLight( 0xffffff, 0.25 ) );
-				scene.add( new THREE.HemisphereLight( 0xffffff, 0x444444, 0.75 ) );
+				scene.add( new THREE.HemisphereLight( 0xffffff, 0x737373, 1 ) );
 
 				const frontLight = new THREE.DirectionalLight( 0xffffff, 0.5 );
 				const backLight = new THREE.DirectionalLight( 0xffffff, 0.5 );
