--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -44,8 +44,8 @@
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 			import { TeapotGeometry } from 'three/addons/geometries/TeapotGeometry.js';
 
-			// import { LoopSubdivision } from 'three-subdivide';
-import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			import { LoopSubdivision } from 'three-subdivide';
+			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 			let renderer, scene, camera;
 			let texture, topTexture, botTexture;
