--- a/example/MorphTargets.html
+++ b/example/MorphTargets.html
@@ -51,8 +51,11 @@
 
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
-			import { LoopSubdivision } from 'three-subdivide';
-			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			// // NPM
+			// import { LoopSubdivision } from 'three-subdivide';
+
+			// // LOCAL
+			import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 			let container, stats;
 			let camera, scene, renderer;
