--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -28,9 +28,9 @@
  		<script type='importmap'>
 	 		{
 		 		"imports": {
-			 		"three": "https://unpkg.com/three@0.151.0/build/three.module.js",
-					"three/addons/": "https://unpkg.com/three@0.151.0/examples/jsm/",
-					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.2/build/index.module.js"
+			 		"three": "https://unpkg.com/three@0.154.0/build/three.module.js",
+					"three/addons/": "https://unpkg.com/three@0.154.0/examples/jsm/",
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.4/build/index.module.js"
 		 		}
 	 		}
  		</script>
@@ -45,10 +45,10 @@
 			import { TeapotGeometry } from 'three/addons/geometries/TeapotGeometry.js';
 
 			// // NPM
-			// import { LoopSubdivision } from 'three-subdivide';
+			import { LoopSubdivision } from 'three-subdivide';
 
 			// // LOCAL
-			import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 			let renderer, scene, camera;
 			let texture, topTexture, botTexture;
@@ -64,7 +64,7 @@
 				preserveEdges: false,
 				flatOnly: false,
 				maxTriangles: 25000,
-				maxShared: 0,
+				weight: 1,
 				flatShading: false,
 				textured: true,
 				wireframe: false
@@ -74,9 +74,12 @@
 
 			function init() {
 
+				const version = parseInt(THREE.REVISION.replace(/\D/g,''));
+
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
+				if (version && !isNan(version) && version > 151) renderer.outputColorSpace = THREE.LinearSRGBColorSpace;
 				document.body.appendChild( renderer.domElement );
 
 				scene = new THREE.Scene();
@@ -154,7 +157,7 @@
 				const preserveController = folder1.add( params, 'preserveEdges' ).onFinishChange( updateMeshes );
 				folder1.add( params, 'flatOnly' ).onFinishChange( updateMeshes );
 				folder1.add( params, 'maxTriangles' ).onFinishChange( updateMeshes );
-				folder1.add( params, 'maxShared' ).min( 0 ).step( 1 ).onFinishChange( updateMeshes );
+				folder1.add( params, 'weight' ).min( 0 ).max( 1 ).step( 0.1 ).onFinishChange( updateMeshes );
 
 				const folder2 = gui.addFolder( 'Material' );
 				folder2.add( params, 'flatShading' ).onFinishChange( updateMaterial );
