--- a/example/MorphTargets.html
+++ b/example/MorphTargets.html
@@ -38,9 +38,9 @@
  		<script type='importmap'>
 	 		{
 		 		"imports": {
-			 		"three": "https://unpkg.com/three@0.151.0/build/three.module.js",
-					"three/addons/": "https://unpkg.com/three@0.151.0/examples/jsm/",
-					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.2/build/index.module.js"
+			 		"three": "https://unpkg.com/three@0.154.0/build/three.module.js",
+					"three/addons/": "https://unpkg.com/three@0.154.0/examples/jsm/",
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.4/build/index.module.js"
 		 		}
 	 		}
  		</script>
@@ -52,10 +52,10 @@
 			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
 			// // NPM
-			// import { LoopSubdivision } from 'three-subdivide';
+			import { LoopSubdivision } from 'three-subdivide';
 
 			// // LOCAL
-			import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 			let container, stats;
 			let camera, scene, renderer;
@@ -127,8 +127,6 @@
 				renderer = new THREE.WebGLRenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
-
-				renderer.outputEncoding = THREE.sRGBEncoding;
 
 				container.appendChild( renderer.domElement );
 
