--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -28,9 +28,9 @@
  		<script type='importmap'>
 	 		{
 		 		"imports": {
-			 		"three": "https://unpkg.com/three@0.154.0/build/three.module.js",
-					"three/addons/": "https://unpkg.com/three@0.154.0/examples/jsm/",
-					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.4/build/index.module.js"
+			 		"three": "https://unpkg.com/three@0.155.0/build/three.module.js",
+					"three/addons/": "https://unpkg.com/three@0.155.0/examples/jsm/",
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.5/build/index.module.js"
 		 		}
 	 		}
  		</script>
@@ -45,10 +45,10 @@
 			import { TeapotGeometry } from 'three/addons/geometries/TeapotGeometry.js';
 
 			// // NPM
-			import { LoopSubdivision } from 'three-subdivide';
+			// import { LoopSubdivision } from 'three-subdivide';
 
 			// // LOCAL
-			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 			let renderer, scene, camera;
 			let texture, topTexture, botTexture;
@@ -94,10 +94,10 @@
 				controls.target.set( 0, 0, 0 );
 				controls.update();
 
-				scene.add( new THREE.HemisphereLight( 0xffffff, 0x737373, 1 ) );
+				scene.add( new THREE.HemisphereLight( 0xffffff, 0x737373, Math.PI ) );
 
-				const frontLight = new THREE.DirectionalLight( 0xffffff, 0.5 );
-				const backLight = new THREE.DirectionalLight( 0xffffff, 0.5 );
+				const frontLight = new THREE.DirectionalLight( 0xffffff, Math.PI / 2 );
+				const backLight = new THREE.DirectionalLight( 0xffffff, Math.PI / 2 );
 				frontLight.position.set( 0, 1, 1 );
 				backLight.position.set( 0, 1, - 1 );
 				scene.add( frontLight, backLight );
